--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -6,7 +6,7 @@ license = "Apache-2.0/MIT"
 name = "yew-parcel"
 readme = "./README.md"
 repository = "https://github.com/spielrs/yew-parcel-template.git"
-version = "0.12.0"
+version = "0.13.0"
 
 [lib]
 crate-type = ["cdylib"]
@@ -20,6 +20,9 @@ serde = "1.0"
 serde_derive = "1.0"
 dotenv = "0.15"
 failure = "0.1"
-yew = { version = "0.12.0", features = ["toml", "yaml", "msgpack", "cbor"]}
-yew-router = "0.9"
+yew = { version = "0.13", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
+yew-router = { version= "0.10", features = ["web_sys"]}
 web-sys = "0.3"
+
+[build]
+target="wasm32-unknown-unknown"
