--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-wasm.rs": "^1.2.15",
+    "sass": "^1.26.3",
     "typescript": "^3.8.3"
   },
   "dependencies": {
