adapt template to the new version of yew

--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ["The RustWasm Developers"]
 categories = ["wasm"]
 description = "My awesome Yew with Yew-Router and Parcel application!"
-license = "Apache-2.0/MIT"
+license = "MIT"
 name = "yew-parcel"
 readme = "./README.md"
 repository = "https://github.com/spielrs/yew-parcel-template.git"
@@ -20,6 +20,6 @@ serde = "1.0"
 serde_derive = "1.0"
 dotenv = "0.15"
 failure = "0.1"
-yew = { version = "0.14", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
-yew-router = { version= "0.11", features = ["web_sys"]}
+yew = { version="0.15", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
+yew-router = { version = "0.12", features = ["web_sys"]}
 web-sys = "0.3"
