--- a/package.json
+++ b/package.json
@@ -7,19 +7,25 @@
   "version": "0.15.0",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "start": "node wasm-builder.js",
+    "build": "node wasm-builder.js production",
+    "debug": "NODE_ENV=dev node --nolazy --inspect-brk=9229 wasm-builder.js"
   },
   "bin": {
     "create-yew-parcel": ".bin/create-yew-parcel.js"
   },
   "devDependencies": {
-    "kind-of": "6.0.3",
-    "minimist": "1.2.5",
+    "chokidar": "^3.4.0",
+    "dotenv": "^8.2.0",
     "parcel-bundler": "^1.12.4",
-    "parcel-plugin-wasm.rs": "^1.2.15",
+    "parcel-plugin-static-files-copy": "^2.3.1",
     "sass": "^1.26.5",
     "typescript": "^3.8.3",
     "yew-styles": "0.2.0"
+  },
+  "dependencies": {},
+  "staticFiles": {
+    "staticPath": "./crate/pkg",
+    "watcherGlob": false
   }
 }
