--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-authors = ["The RustWasm Developers"]
+authors = ["Francisco Jesus Navarro Cortes"]
 categories = ["wasm"]
 description = "My awesome Yew with Yew-Router and Parcel application!"
 license = "MIT"
@@ -20,7 +20,7 @@ serde = "1.0"
 serde_derive = "1.0"
 dotenv = "0.15"
 failure = "0.1"
-yew = { version="0.15", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
-yew-router = { version = "0.12", features = ["web_sys"]}
+yew = { version="0.16", features = ["toml", "yaml", "msgpack", "cbor", "web_sys"]}
+yew-router = { version = "0.13", features = ["web_sys"]}
 web-sys = "0.3"
-yew_styles = "0.3"
+yew_styles = "0.3.1"
