--- a/package.json
+++ b/package.json
@@ -8,20 +8,23 @@
   "license": "MIT",
   "scripts": {
     "start": "node wasm-builder.js",
-    "build": "node wasm-builder.js production",
+    "build": "NODE_ENV=production node wasm-builder.js",
     "debug": "NODE_ENV=dev node --nolazy --inspect-brk=9229 wasm-builder.js"
   },
   "bin": {
     "create-yew-parcel": ".bin/create-yew-parcel.js"
   },
   "devDependencies": {
+    "brotli": "^1.3.2",
     "chokidar": "^3.4.0",
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "parcel-bundler": "^1.12.4",
-    "parcel-plugin-static-files-copy": "^2.3.1",
+    "parcel-plugin-static-files-copy": "^2.4.3",
     "sass": "^1.26.5",
     "typescript": "^3.8.3",
-    "yew-styles": "0.7.0"
+    "yew-styles": "0.7.1"
   },
   "dependencies": {},
   "staticFiles": {
