--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "repository": {
     "url": "https://github.com/spielrs/yew-parcel-template"
   },
-  "name": "create-yew-parcel",
+  "name": "yew-parcel",
   "version": "0.17.0",
   "license": "MIT",
   "scripts": {
