--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "repository": {
     "url": "https://github.com/spielrs/yew-parcel-template"
   },
-  "name": "yew-parcel",
-  "version": "0.17.2",
+  "name": "create-yew-parcel",
+  "version": "0.17.0",
   "license": "MIT",
   "scripts": {
     "start": "node wasm-builder.js",
@@ -12,7 +12,7 @@
     "debug": "NODE_ENV=dev node --nolazy --inspect-brk=9229 wasm-builder.js"
   },
   "bin": {
-    "yew-parcel": ".bin/create-yew-parcel.js"
+    "create-yew-parcel": ".bin/create-yew-parcel.js"
   },
   "devDependencies": {
     "brotli": "^1.3.2",
